[초기데이터 활용한 Swagger 테스트에 따른 코드 수정] - Swagger 원클릭 테스트 가능하도록 데이터들 Controller에 추가 - Security 권한 관련 문제(Role 무조건 반환, session 잔존 문제) - security exception 발생시 전체 에러 출력 -> Message 로 변경 - 초기데이터 수정 - jackson 추가 snake-camel - 마지막에 Rental 가능 목록 출력 - Request, Response 명시적으로 변경(메세지 추가, list->객체화 등) - 객체 save 시 로깅 추가