@@ -6,6 +6,7 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 public class BookstoreUserDetails implements UserDetails {
@@ -17,7 +18,10 @@ public class BookstoreUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().name()));
+        if (user != null && user.getRole() != null) {
+            return List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().name()));
+        }
+        return Collections.emptyList();
     }
 
     @Override
